fixed header spacing

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -71,7 +71,7 @@ a{
 #main h2{
     margin-top: 10px;
     font-size: 60px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 
 #main hr{
